bandymas is namu

--- a/CSS užduotis.html
+++ b/CSS užduotis.html
@@ -40,6 +40,10 @@
  	 	</section>
  	 <footer>
  	 	<p>Ignas Šiugždinis</p>
+ 	 	<p>ignas</p>
+ 	 	<p>Ignas</p>
  	 </footer>
  	</body>
  </html>
+
+ Bandymas ar viskas pavyksta
